# backend/app/Models/Attachment.php
@@ -7,11 +7,28 @@ use Illuminate\Database\Eloquent\Model;
 use Illuminate\Database\Eloquent\Relations\BelongsTo;
 
 /**
+ * "id": 7,
+            "filename": "cover-letter-pd-1694024704.pdf",
+            "type": "pdf",
+            "path": "attachments\/cover-letter-pd-1694024704.pdf",
+            "task_id": 5,
+            "created_at": "2023-09-06T18:25:04.000000Z",
+            "updated_at": "2023-09-06T18:25:04.000000Z"
+ */
+
+/**
  * @OA\Schema(
  *    schema="Attachment",
  *        @OA\Property(
  *            property="id",
  *            description="Attachment identifier",
+ *            type="integer",
+ *            nullable="false",
+ *            example="1"
+ *        ),
+ *        @OA\Property(
+ *            property="task_id",
+ *            description="Task identifier",
  *            type="integer",
  *            nullable="false",
  *            example="1"
@@ -23,12 +40,33 @@ use Illuminate\Database\Eloquent\Relations\BelongsTo;
  *            nullable="true",
  *            example="test-attachment.docx"
  *        ),
+ *       @OA\Property(
+ *            property="created_at",
+ *            description="date created",
+ *            type="date",
+ *            nullable="false",
+ *            example="2023-09-06T18:25:04.000000Z"
+ *        ),
+ *       @OA\Property(
+ *            property="updated_at",
+ *            description="date updated",
+ *            type="date",
+ *            nullable="false",
+ *            example="2023-09-06T18:25:04.000000Z"
+ *        ),
+ *        @OA\Property(
+ *            property="path",
+ *            description="Path of the upoaded file",
+ *            type="string",
+ *            nullable="true",
+ *            example="attachments\/cover-letter-pd-1694024704.pdf"
+ *        ),
  *        @OA\Property(
  *            property="type",
  *            description="file type extension of the attachment",
  *            type="string",
  *            nullable="false",
- *            example="john.doe@todo.com"
+ *            example="pdf"
  *        ),
  *    )
  * )
