# backend/routes/api.php
@@ -4,20 +4,8 @@ use App\Http\Controllers\AttachmentController;
 use App\Http\Controllers\AuthController;
 use App\Http\Controllers\TagController;
 use App\Http\Controllers\TaskController;
-use App\Models\User;
 use Illuminate\Support\Facades\Response;
 use Illuminate\Support\Facades\Route;
-
-/*
-|--------------------------------------------------------------------------
-| API Routes
-|--------------------------------------------------------------------------
-|
-| Here is where you can register API routes for your application. These
-| routes are loaded by the RouteServiceProvider and all of them will
-| be assigned to the "api" middleware group. Make something great!
-|
-*/
 
 Route::middleware('auth:sanctum')->group(function () {
 
@@ -26,18 +14,16 @@ Route::middleware('auth:sanctum')->group(function () {
     });
 
     Route::get('/task', [TaskController::class, 'getAll']);
-
     Route::get('/task/{id}', [TaskController::class, 'getById']);
-
     Route::put('/task/{id}', [TaskController::class, 'update']);
-
     Route::post('/task', [TaskController::class, 'create']);
+    Route::get('/task/{id}/tag', [TaskController::class, 'getTaskTags']);
 
     Route::post('/task/{id}/attachment', [AttachmentController::class, 'upload']);
     Route::get('/task/{id}/attachment', [AttachmentController::class, 'getAttachmentsByTask']);
     Route::delete('/task/{id}/attachment/{attachmentId}', [AttachmentController::class, 'delete']);
 
-
+    Route::post('/tag', [TagController::class, 'create']);
     Route::get('/tag', [TagController::class, 'getAll']);
 
     Route::delete('/task/{id}', [TaskController::class, 'delete']);
